fixes spacing in RTE | E1-355

--- a/ui.frontend/src/main/webpack/etisalat/styles/core-components/tabs/_tabs.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/core-components/tabs/_tabs.scss
@@ -1346,7 +1346,6 @@
         font-size: toRem(16);
         font-weight: normal;
         line-height: 1.5;
-        padding-right: toRem(16);
       }
 
       ul {
